--- a/display.html
+++ b/display.html
@@ -16,7 +16,7 @@
             <tr><td class="left"><strong>Valid From:</strong></td><td><p id="valid-from"></p></td></tr>
             <tr><td class="left"><strong>Valid Till:</strong></td><td><p id="valid-till"></p></td></tr>
             <tr><td class="left"><strong>Card Type:</strong></td><td><p id="card-type"></p></td></tr>
-            <tr><td class="left"><strong>CVV:</strong></td>:</td><td><p id="CVV"></p></td></tr>
+            <tr><td class="left"><strong>CVV:</strong></td></td><td><p id="CVV"></p></td></tr>
 
         </table>
             
